<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="90dp"
                  android:textSize="30sp"
                  android:id="@+id/textViewHistory"
                  android:gravity="center|end"
                  android:textColor="@color/black"
                  android:background="@color/white"/>
        <TextView android:layout_width="match_parent" android:layout_height="110dp"
                  android:textSize="60sp"
                  android:id="@+id/textViewResult"
                  android:gravity="center|end"
                  android:textColor="@color/black"
                  android:background="@color/white"
                  android:text="@string/num_zero"/>


        <GridLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:rowCount="5" android:columnCount="4">

            <!-- row 1 -->

            <Button android:id="@+id/btnAC" android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/ac_btn_txt"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btnDel"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/del_btn_text"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btnDivide"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/divide_btn_text"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btnMult"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/multi_btn_txt"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_columnWeight="1"/>

            <!-- row 2 -->

            <Button android:id="@+id/btnMinus"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/minus_btn_text"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn9"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_9_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn8"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_8_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn7"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_7_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>

            <!-- row 3 -->

            <Button android:id="@+id/btnPlus"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/plus_btn_txt"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn6" android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_6_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn5"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_5_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn4"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_4_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>


            <!-- row 4 -->

            <Button android:id="@+id/btnEquals"
                    android:layout_height="160dp"
                    android:layout_width="wrap_content"
                    android:text="@string/equals_btn_txt"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:background="@color/orange"
                    android:layout_row="3"
                    android:layout_column="3"
                    android:layout_columnWeight="1"


                    android:layout_rowSpan="2"
                    android:layout_gravity="center_vertical"
                    app:backgroundTint="@color/orange"/>


            <Button android:id="@+id/btn3"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_3_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn2"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_2_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_columnWeight="1"/>

            <Button android:id="@+id/btn1"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_1_btn"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>

            <!-- row 5 -->

            <Button android:id="@+id/btnZero"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/_0_btn"
                    android:textSize="30sp"
                    android:textColor="@color/orange"
                    android:background="@color/white"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="2"
            />


            <Button android:id="@+id/btnDot"
                    android:layout_height="80dp"
                    android:layout_width="wrap_content"
                    android:text="@string/dot_btn_txt"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>
        </GridLayout>

    </LinearLayout>


</LinearLayout>